Issue #1 fix: removed inline css and added z-index in fliter

--- a/app/private/styles/views/filter.less
+++ b/app/private/styles/views/filter.less
@@ -90,3 +90,7 @@
     box-shadow: none;
     -webkit-touch-callout: none;
 }
+
+.filtercolmntext {
+    z-index: 11;
+}
